fix(ui): scroll to bottom button visibility in chat (#1028)

--- a/apps/beeai-ui/src/modules/runs/chat/ChatMessagesView.module.scss
+++ b/apps/beeai-ui/src/modules/runs/chat/ChatMessagesView.module.scss
@@ -56,12 +56,6 @@ $input-height: rem(88px);
   );
 }
 
-.scrollRef {
-  position: absolute;
-  inset-block-end: 0;
-  inset-inline-start: 0;
-}
-
 .bottom {
   position: relative;
 }
